--- a/hello-client.properties
+++ b/hello-client.properties
@@ -1,2 +1,2 @@
 # Put application-specific config here (application name: hello-client)
-some.property=app specific overridden value test
+some.property=app specific overridden value after commit!
