--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 # Put all global configuration here
-some.property=global r
-some.other.property=global r
+some.property=global
+some.other.property=global other property
