--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 # Put all global configuration here
 some.property=global
-some.other.property=global other property
+some.other.property=global other property refreshed!
